@@ -2,6 +2,8 @@
 changes relative to sbcl-1.4.0:
   * optimization: faster foreign callbacks.
   * enhancement: complex arrays can be stack allocated.
+  * optimization: the register allocation method used by the compiler when
+    optimizing for speed is now faster for functions with large bodies.
   * bug fix: SB-INTROSPECT:ALLOCATION-INFORMATION works on big-endian CPUs
     (fixes lp#490490 for real rather than by disabling a test)
 
